# goit-algo-fp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
task_1/: README.md  main.py
task_2/: README.md  main.py
task_3/: README.md  main.py
task_4/: README.md  main.py
task_5/: README.md  main.py  task_4.py
task_6/: README.md  main.py
task_7/: README.md  main.py
tests/: conftest.py  test_properties.py  test_task1_linked_list.py  test_task2_pythagoras.py  test_task3_dijkstra.py  test_task4_heap.py  test_task5_traversal.py  test_task6_knapsack.py  test_task7_dice.py  test_viz_colors.py
viz/: __init__.py  anim.py  bench.py  binary_tree.py  colors.py  dice_chart.py  dijkstra_graph.py  pythagoras.py
